--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="icon" href="/zyl-web/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>zyl</title>
-<script type="module" src="/zyl-web/_assets/index.3c6db4d3.js"></script>
-<link rel="stylesheet" href="/zyl-web/_assets/style.b72dcf2c.css">
+<script type="module" src="/zyl-web/index.3c6db4d3.js"></script>
+<link rel="stylesheet" href="/zyl-web/style.b72dcf2c.css">
 </head>
 <body>
   <div id="app"></div>
