--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/zyl-web/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>zyl</title>
+  <title>zyl happy birthday</title>
 <script type="module" src="/zyl-web/index.eaad27ab.js"></script>
 <link rel="stylesheet" href="/zyl-web/style.ea8e1a0f.css">
 </head>
